NLP TP's/texts/robotics/robotics.stackexchange_0000077868.txt
Q:

Fail to catkin_make descartes pacakge

I am sorry that I just started to learn the ROS and now want to use the cartesian motion planner for a project. However, I installed the package of descartes from https://github.com/ros-industrial-consortium/descartes, and then catkin_make the package, it will not be compiled successfully. My OS is Linux 14.04 Ubuntu and Indigo. May I request the help  how can I solve the problem and then I can continue.
 Base path: /home/ros-industrial/catkin_ws
Source space: /home/ros-industrial/catkin_ws/src
Build space: /home/ros-industrial/catkin_ws/build
Devel space: /home/ros-industrial/catkin_ws/devel
Install space: /home/ros-industrial/catkin_ws/install
####
#### Running command: "cmake /home/ros-industrial/catkin_ws/src -DCATKIN_DEVEL_PREFIX=/home/ros-industrial/catkin_ws/devel -DCMAKE_INSTALL_PREFIX=/home/ros-industrial/catkin_ws/install -G Unix Makefiles" in "/home/ros-industrial/catkin_ws/build"
####
-- Using CATKIN_DEVEL_PREFIX: /home/ros-industrial/catkin_ws/devel
-- Using CMAKE_PREFIX_PATH: /opt/ros/indigo
-- This workspace overlays: /opt/ros/indigo
-- Using PYTHON_EXECUTABLE: /usr/bin/python
-- Using Debian Python package layout
-- Using empy: /usr/bin/empy
-- Using CATKIN_ENABLE_TESTING: ON
-- Call enable_testing()
-- Using CATKIN_TEST_RESULTS_DIR: /home/ros-industrial/catkin_ws/build/test_results
-- Found gtest sources under '/usr/src/gtest': gtests will be built
-- Using Python nosetests: /usr/bin/nosetests-2.7
-- catkin 0.6.11
-- BUILD_SHARED_LIBS is on
WARNING: Package "ompl" does not follow the version conventions. It should not contain leading zeros (unless the number is 0).
-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-- ~~  traversing 7 packages in topological order:
-- ~~  - descartes (metapackage)
-- ~~  - descartes_core
-- ~~  - descartes_trajectory
-- ~~  - descartes_planner
-- ~~  - descartes_utilities
-- ~~  - descartes_moveit
-- ~~  - descartes_tutorials
-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-- +++ processing catkin metapackage: 'descartes'
-- ==> add_subdirectory(descartes/descartes)
-- +++ processing catkin package: 'descartes_core'
-- ==> add_subdirectory(descartes/descartes_core)
-- Using these message generators: gencpp;genlisp;genpy
-- Boost version: 1.54.0
-- Eigen found (include: /usr/include/eigen3)
-- +++ processing catkin package: 'descartes_trajectory'
-- ==> add_subdirectory(descartes/descartes_trajectory)
-- Using these message generators: gencpp;genlisp;genpy
-- descartes_core: enabling C++0x (required)
-- Boost version: 1.54.0
-- Eigen found (include: /usr/include/eigen3)
-- +++ processing catkin package: 'descartes_planner'
-- ==> add_subdirectory(descartes/descartes_planner)
-- Using these message generators: gencpp;genlisp;genpy
-- descartes_core: enabling C++0x (required)
-- Boost version: 1.54.0
-- Eigen found (include: /usr/include/eigen3)
-- +++ processing catkin package: 'descartes_utilities'
-- ==> add_subdirectory(descartes/descartes_utilities)
-- Using these message generators: gencpp;genlisp;genpy
-- descartes_core: enabling C++0x (required)
-- +++ processing catkin package: 'descartes_moveit'
-- ==> add_subdirectory(descartes/descartes_moveit)
-- Using these message generators: gencpp;genlisp;genpy
-- descartes_core: enabling C++0x (required)
-- Boost version: 1.54.0
-- Eigen found (include: /usr/include/eigen3)
-- +++ processing catkin package: 'descartes_tutorials'
-- ==> add_subdirectory(descartes/descartes_tutorials/descartes_tutorials)
-- Using these message generators: gencpp;genlisp;genpy
-- descartes_core: enabling C++0x (required)
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ros-industrial/catkin_ws/build
####
#### Running command: "make -j2 -l2" in "/home/ros-industrial/catkin_ws/build"
####
[  6%] [  6%] Built target descartes_core
Built target sensor_msgs_generate_messages_cpp
[  6%] Built target shape_msgs_generate_messages_cpp
[  6%] Built target moveit_msgs_generate_messages_cpp
[  6%] Built target geometry_msgs_generate_messages_lisp
[  6%] Built target moveit_msgs_generate_messages_py
[  6%] Built target octomap_msgs_generate_messages_cpp
[  6%] Built target trajectory_msgs_generate_messages_py
[  6%] [  6%] Built target roscpp_generate_messages_cpp
Built target roscpp_generate_messages_lisp
[  6%] Built target moveit_msgs_generate_messages_lisp
[  6%] Built target geometry_msgs_generate_messages_cpp
[  6%] [  6%] Built target shape_msgs_generate_messages_lisp
Built target shape_msgs_generate_messages_py
[  6%] Built target octomap_msgs_generate_messages_py
[  6%] Built target octomap_msgs_generate_messages_lisp
[  6%] Built target std_msgs_generate_messages_py
[  6%] Built target geometry_msgs_generate_messages_py
[  6%] Built target actionlib_msgs_generate_messages_py
[  6%] Built target sensor_msgs_generate_messages_lisp
[  6%] Built target actionlib_msgs_generate_messages_lisp
[  6%] Built target std_msgs_generate_messages_cpp
[  6%] Built target trajectory_msgs_generate_messages_cpp
[  6%] Built target sensor_msgs_generate_messages_py
[  6%] [  6%] Built target trajectory_msgs_generate_messages_lisp
Built target actionlib_msgs_generate_messages_cpp
[  6%] Built target object_recognition_msgs_generate_messages_lisp
[  6%] Built target object_recognition_msgs_generate_messages_py
[  6%] Built target std_msgs_generate_messages_lisp
[  6%] Built target object_recognition_msgs_generate_messages_cpp
[  6%] Built target rosgraph_msgs_generate_messages_cpp
[  6%] Built target rosgraph_msgs_generate_messages_lisp
[  6%] Built target rosgraph_msgs_generate_messages_py
[  6%] Built target roscpp_generate_messages_py
[ 37%] Built target descartes_trajectory
[ 43%] Built target descartes_utilities
[ 68%] Built target descartes_planner
[ 75%] Building CXX object descartes/descartes_moveit/CMakeFiles/descartes_moveit.dir/src/ikfast_moveit_state_adapter.cpp.o
/home/ros-industrial/catkin_ws/src/descartes/descartes_moveit/src/ikfast_moveit_state_adapter.cpp: In member function ‘virtual bool descartes_moveit::IkFastMoveitStateAdapter::getAllIK(const Affine3d&, std::vector<std::vector<double> >&) const’:
/home/ros-industrial/catkin_ws/src/descartes/descartes_moveit/src/ikfast_moveit_state_adapter.cpp:83:4: error: ‘KinematicsResult’ is not a member of ‘kinematics’
    kinematics::KinematicsResult result;
    ^
/home/ros-industrial/catkin_ws/src/descartes/descartes_moveit/src/ikfast_moveit_state_adapter.cpp:83:33: error: expected ‘;’ before ‘result’
    kinematics::KinematicsResult result;
                                 ^
/home/ros-industrial/catkin_ws/src/descartes/descartes_moveit/src/ikfast_moveit_state_adapter.cpp:86:65: error: ‘result’ was n

    ot declared in this scope
        if (!solver->getPositionIK(poses, dummy_seed, joint_results, result, options))
                                                                     ^
    make[2]: *** [descartes/descartes_moveit/CMakeFiles/descartes_moveit.dir/src/ikfast_moveit_state_adapter.cpp.o] Error 1
    make[1]: *** [descartes/descartes_moveit/CMakeFiles/descartes_moveit.dir/all] Error 2
    make: *** [all] Error 2
    Invoking "make -j2 -l2" failed

Originally posted by jasonvank on ROS Answers with karma: 1 on 2016-12-16
Post score: 0

Original comments
Comment by mgruhler on 2016-12-16:
cross-posted: https://github.com/ros-industrial-consortium/descartes/issues/188

A:

If you're building descartes itself, that error is strange. Make sure your code is uptodate and no corruption (which can barely but surely happen when you mess your workspace somehow). The package you got error with descartes_moveit seems to have not been updated for half an year and I was just able to build it locally.
Also I added some info for building the tutorial.

Originally posted by 130s with karma: 10937 on 2017-03-31
This answer was ACCEPTED on the original site
Post score: 0

